# Projeto-WallStreet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
