[tool.poetry]
name = "projeto-wall-street"
version = "0.1.0"
description = "Gerenciador de Finanças Pessoais"
authors = ["Isaías Gouvêa Gonçalves <isaias.ggoncalves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.0"
plotly = "^5.18.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
